force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/GPMS_Vary_Service_Location_History__c.object-meta.xml
<CustomObject>
    <label>Vary Service Location History</label>
    <nameField>
        <displayFormat>VSL-{0000000}</displayFormat>
        <label>Vary Service Location History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vary Service Location History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>