force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>