force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Date_Decision_Required_by__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_Decision_Required_by__c</fullName>
    <label>Date Decision Required by</label>
    <type>Date</type>
</CustomField>