force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Delegate_Position__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_Position__c</fullName>
    <label>Delegate Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APS6 Departmental Officer NSW ACT - 42201001</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSW ACT - 50051395</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSW ACT - 42001502</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSW ACT - 42001443</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSW ACT - 42001441</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSWACT - 50051395</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSWACT - 42001441</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSWACT - 42001502</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSWACT - 42201001</fullName>
            </value>
            <value>
                <fullName>APS6 Departmental Officer NSWACT - 42001443</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary - AACD Aged Care Programs BR - 1201345</fullName>
            </value>
            <value>
                <fullName>Assistant State Manager - Aged Care Branch, New South Wales - 1220252</fullName>
            </value>
            <value>
                <fullName>Assistant Territory Manager, Australian Capital Territory - 1200607</fullName>
            </value>
            <value>
                <fullName>Departmental Officer, Australian Capital Territory - 1202744</fullName>
            </value>
            <value>
                <fullName>Departmental Officer, Australian Capital Territory - 20001692</fullName>
            </value>
            <value>
                <fullName>Director, Aged Care Branch, NSW &amp; ACT - 1220252</fullName>
            </value>
            <value>
                <fullName>Director, Aged Care Programmes - 42001474</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSW ACT - 50051393</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSW ACT - 42001420</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSW ACT - 42001439</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSW ACT - 42001585</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSWACT - 42001439</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSWACT - 50051393</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSWACT - 42001420</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director NSWACT - 42001585</fullName>
            </value>
            <value>
                <fullName>EL1 Assistant Director VIC - 42001331</fullName>
            </value>
            <value>
                <fullName>EL2 Director NSW ACT - 42001513</fullName>
            </value>
            <value>
                <fullName>EL2 Director NSWACT - 42001513</fullName>
            </value>
            <value>
                <fullName>EL2 Director Residential Care - 42004924</fullName>
            </value>
            <value>
                <fullName>Executive Level 1 NSW/ACT ageing and aged care - 20027084</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>