force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Event__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Vary Service Location History</relationshipLabel>
    <relationshipName>Vary_Service_Location_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>