force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Link_to_Documents__c</fullName>
    <label>Link to Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>