force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Variation_Date_Being_Approved__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Variation_Date_Being_Approved__c</fullName>
    <label>Variation Date Being Approved</label>
    <type>Date</type>
</CustomField>