force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/fields/GPMS_Variation_Day_Sought__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Variation_Day_Sought__c</fullName>
    <label>Variation Day Sought</label>
    <type>Date</type>
</CustomField>