force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Cancel_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Cancel_VSL</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>