force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Change_Variation_Day_Variation_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Change_Variation_Day_Variation_VSL</fullName>
    <active>true</active>
    <label>Change Variation Day Variation</label>
</RecordType>