force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Record_Decision_on_Request_For_Reconsideration_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Record_Decision_on_Request_For_Reconsideration_VSL</fullName>
    <active>true</active>
    <label>Record Decision on Request For Reconsideration</label>
</RecordType>