force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Record_Decision_To_Activate_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Record_Decision_To_Activate_VSL</fullName>
    <active>true</active>
    <label>Record Decision To Activate</label>
</RecordType>