force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Record_Decision_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Record_Decision_VSL</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>