force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Record_Request_for_Reconsideration_Variation_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Record_Request_for_Reconsideration_Variation_VSL</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration Variation</label>
</RecordType>