force-app/main/default/objects/GPMS_Vary_Service_Location_History__c/recordTypes/GPMS_Withdraw_VSL.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Withdraw_VSL</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>